--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/catImage"
+        android:layout_width="354dp"
+        android:layout_height="456dp"
+        app:srcCompat="@drawable/cat3" />
 
     <GridLayout
         android:layout_width="wrap_content"
@@ -130,4 +137,5 @@
             android:text="254" />
 
     </GridLayout>
+
 </RelativeLayout>
