--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,8 +10,8 @@
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
-        android:layout_width="242dp"
-        android:layout_height="301dp"
+        android:layout_width="241dp"
+        android:layout_height="472dp"
         android:orientation="vertical"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,6 +19,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+        <TextView
+            android:id="@+id/titleView"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:fontFamily="serif-monospace"
+            android:gravity="center_horizontal"
+            android:text="CATS CALORE"
+            android:textSize="40dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="-45dp"
+            android:layout_weight="0.27" />
 
         <Button
             android:id="@+id/startButton"
@@ -36,6 +48,7 @@
             android:id="@+id/catsButton"
             android:layout_width="239dp"
             android:layout_height="80dp"
+            android:onClick="onCatsButton"
             android:text="Cats" />
 
         <Space
