--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -5,7 +5,8 @@
 
     <ImageView
         android:id="@+id/catImage"
-
+        android:layout_width="354dp"
+        android:layout_height="456dp"
         app:srcCompat="@drawable/cat3" />
 
     <GridLayout
