--- a/app/src/main/res/layout/content_cats.xml
+++ b/app/src/main/res/layout/content_cats.xml
@@ -10,6 +10,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/cat1" />
+        android:scaleType="fitCenter" />
 </RelativeLayout>
