--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -6,8 +6,7 @@
     <ImageView
         android:id="@+id/catImage"
         android:layout_width="354dp"
-        android:layout_height="456dp"
-        app:srcCompat="@drawable/cat3" />
+        android:layout_height="456dp" />
 
     <GridLayout
         android:layout_width="wrap_content"
